<resources>
    <string name="app_name">Marvel</string>
    <string name="search">Search</string>
    <string name="offline">You are offline, Check your network</string>
    <string name="serverError">Server Error</string>
    <string name="loading">Loading, Please Wait...</string>
    <string name="description">Description</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="series">Series</string>
    <string name="stories">Stories</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_a_character">Search for a character...</string>

</resources>